--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <nav>
                 <ul>
                     <li><a class="knopka" href="#katalog">Ігри</a></li>
-                    <li><a class="knopka" href="" >Допомога</a></li>
+                    <li><a class="knopka" href="#" >Допомога</a></li>
                     <li><a class="knopka" href="#footer" >Контакти</a></li>
                     <li><a class="knopka" href="#Pronas" >Про нас</a></li>
                     <li><a class="knopka" href="#vidgyk" > Відгуки</a></li>
