--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
          Про нас   
         </h2> 
         <h2 class="s">  Ми працюємо з 2023 року. Система покупки ігор працює так. </h2> 
-        <h2 class="s"> Ви кидаєте гроши на гру додаємо вас в друзі Steam потім  </h2>
-        <h2 class="s"> купляємо та даруємо вам.   </h2>
+        <h2 class="s"> Ви купляйте гру і ми даємо вам ключ активації для гри. </h2>
         <img class="gamepad" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSN7nizbOIBB4OJFKFPLNZDCs3mAK3RCTzTjA&usqp=CAU">
         <h2 id="katalog" class="h2a1">
          Каталог   
